// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`overlayAt > defaults seed to 42 1`] = `
{
  "anchors": [
    {
      "kind": "point",
      "size": 2.2,
      "x": 0.18297857247988342,
      "y": 0.22293157946003747,
    },
    {
      "kind": "cross",
      "size": 2.4,
      "x": 0.31226382492179483,
      "y": 0.18025402932934415,
    },
    {
      "kind": "point",
      "size": 1.8,
      "x": 0.416438064765672,
      "y": 0.3370029599790114,
    },
    {
      "kind": "square",
      "size": 2.1,
      "x": 0.278654046566166,
      "y": 0.48051827488243126,
    },
    {
      "kind": "point",
      "size": 2,
      "x": 0.2239087726133833,
      "y": 0.6828634862907228,
    },
    {
      "kind": "cross",
      "size": 2,
      "x": 0.48033870577245885,
      "y": 0.578743836231468,
    },
    {
      "kind": "point",
      "size": 1.7,
      "x": 0.6160039466386819,
      "y": 0.25746021328029495,
    },
    {
      "kind": "square",
      "size": 2.3,
      "x": 0.740691033176575,
      "y": 0.38191063883956977,
    },
    {
      "kind": "point",
      "size": 1.9,
      "x": 0.6838179817209638,
      "y": 0.5220474361295736,
    },
    {
      "kind": "cross",
      "size": 2.1,
      "x": 0.8183251149752906,
      "y": 0.4375617594149957,
    },
    {
      "kind": "point",
      "size": 1.6,
      "x": 0.5766136177070599,
      "y": 0.7185808716207178,
    },
    {
      "kind": "square",
      "size": 1.8,
      "x": 0.7825475184527597,
      "y": 0.6628039343417425,
    },
  ],
  "boxes": [
    {
      "confidence": 0.8781798172096368,
      "height": 0.64,
      "id": 1,
      "width": 0.34,
      "x": 0.10521250183979602,
      "y": 0.13554758095709007,
    },
    {
      "confidence": 0.753251149752907,
      "height": 0.44,
      "id": 2,
      "width": 0.34,
      "x": 0.4839616936131409,
      "y": 0.2783175582077075,
    },
  ],
  "brackets": [
    {
      "size": 0.022,
      "x": 0.31,
      "y": 0.18,
    },
    {
      "size": 0.02,
      "x": 0.74,
      "y": 0.38,
    },
    {
      "size": 0.018,
      "x": 0.22,
      "y": 0.68,
    },
  ],
  "labels": [
    {
      "align": "left",
      "text": "IDX 003",
      "x": 0.16,
      "y": 0.16,
    },
    {
      "align": "left",
      "text": "S .86",
      "x": 0.4,
      "y": 0.36,
    },
    {
      "align": "right",
      "text": "A07",
      "x": 0.7,
      "y": 0.3,
    },
    {
      "align": "right",
      "text": "C .91",
      "x": 0.7,
      "y": 0.62,
    },
  ],
  "lines": [
    {
      "alpha": 0.55,
      "ax": 0.18,
      "ay": 0.22,
      "bx": 0.31,
      "by": 0.18,
    },
    {
      "alpha": 0.4,
      "ax": 0.31,
      "ay": 0.18,
      "bx": 0.42,
      "by": 0.34,
    },
    {
      "alpha": 0.48,
      "ax": 0.28,
      "ay": 0.48,
      "bx": 0.22,
      "by": 0.68,
    },
    {
      "alpha": 0.38,
      "ax": 0.42,
      "ay": 0.34,
      "bx": 0.48,
      "by": 0.58,
    },
    {
      "alpha": 0.52,
      "ax": 0.62,
      "ay": 0.26,
      "bx": 0.74,
      "by": 0.38,
    },
    {
      "alpha": 0.44,
      "ax": 0.74,
      "ay": 0.38,
      "bx": 0.82,
      "by": 0.44,
    },
    {
      "alpha": 0.36,
      "ax": 0.68,
      "ay": 0.52,
      "bx": 0.78,
      "by": 0.66,
    },
    {
      "alpha": 0.33,
      "ax": 0.48,
      "ay": 0.58,
      "bx": 0.58,
      "by": 0.72,
    },
  ],
}
`;

exports[`overlayAt > drifts boxes with time and pins connections 1`] = `
{
  "anchors": [
    {
      "kind": "point",
      "size": 2.2,
      "x": 0.18329047168866702,
      "y": 0.22298839633612844,
    },
    {
      "kind": "cross",
      "size": 2.4,
      "x": 0.31183146163741826,
      "y": 0.179876368902742,
    },
    {
      "kind": "point",
      "size": 1.8,
      "x": 0.4162375808143433,
      "y": 0.3370434620362824,
    },
    {
      "kind": "square",
      "size": 2.1,
      "x": 0.2791380723571892,
      "y": 0.4808854983748594,
    },
    {
      "kind": "point",
      "size": 2,
      "x": 0.22398452844817124,
      "y": 0.6827283547831011,
    },
    {
      "kind": "cross",
      "size": 2,
      "x": 0.4798351585369893,
      "y": 0.5784114346405657,
    },
    {
      "kind": "point",
      "size": 1.7,
      "x": 0.6160579493817099,
      "y": 0.2576810010176823,
    },
    {
      "kind": "square",
      "size": 2.3,
      "x": 0.7411806644998126,
      "y": 0.38218614586173144,
    },
    {
      "kind": "point",
      "size": 1.9,
      "x": 0.6836378063774682,
      "y": 0.5217556532662956,
    },
    {
      "kind": "cross",
      "size": 2.1,
      "x": 0.8178819128540875,
      "y": 0.4373614416237603,
    },
    {
      "kind": "point",
      "size": 1.6,
      "x": 0.5769080013569098,
      "y": 0.7189242741730161,
    },
    {
      "kind": "square",
      "size": 1.8,
      "x": 0.7829148611489752,
      "y": 0.6629157610765964,
    },
  ],
  "boxes": [
    {
      "confidence": 0.876378063774681,
      "height": 0.64,
      "id": 1,
      "width": 0.34,
      "x": 0.1057583254551673,
      "y": 0.1352969760179292,
    },
    {
      "confidence": 0.7488191285408761,
      "height": 0.44,
      "id": 2,
      "width": 0.34,
      "x": 0.48320505786548196,
      "y": 0.2789225904464865,
    },
  ],
  "brackets": [
    {
      "size": 0.022,
      "x": 0.31,
      "y": 0.18,
    },
    {
      "size": 0.02,
      "x": 0.74,
      "y": 0.38,
    },
    {
      "size": 0.018,
      "x": 0.22,
      "y": 0.68,
    },
  ],
  "labels": [
    {
      "align": "left",
      "text": "IDX 003",
      "x": 0.16,
      "y": 0.16,
    },
    {
      "align": "left",
      "text": "S .86",
      "x": 0.4,
      "y": 0.36,
    },
    {
      "align": "right",
      "text": "A07",
      "x": 0.7,
      "y": 0.3,
    },
    {
      "align": "right",
      "text": "C .91",
      "x": 0.7,
      "y": 0.62,
    },
  ],
  "lines": [
    {
      "alpha": 0.55,
      "ax": 0.18,
      "ay": 0.22,
      "bx": 0.31,
      "by": 0.18,
    },
    {
      "alpha": 0.4,
      "ax": 0.31,
      "ay": 0.18,
      "bx": 0.42,
      "by": 0.34,
    },
    {
      "alpha": 0.48,
      "ax": 0.28,
      "ay": 0.48,
      "bx": 0.22,
      "by": 0.68,
    },
    {
      "alpha": 0.38,
      "ax": 0.42,
      "ay": 0.34,
      "bx": 0.48,
      "by": 0.58,
    },
    {
      "alpha": 0.52,
      "ax": 0.62,
      "ay": 0.26,
      "bx": 0.74,
      "by": 0.38,
    },
    {
      "alpha": 0.44,
      "ax": 0.74,
      "ay": 0.38,
      "bx": 0.82,
      "by": 0.44,
    },
    {
      "alpha": 0.36,
      "ax": 0.68,
      "ay": 0.52,
      "bx": 0.78,
      "by": 0.66,
    },
    {
      "alpha": 0.33,
      "ax": 0.48,
      "ay": 0.58,
      "bx": 0.58,
      "by": 0.72,
    },
  ],
}
`;

exports[`overlayAt > drifts boxes with time and pins connections 2`] = `
{
  "anchors": [
    {
      "kind": "point",
      "size": 2.2,
      "x": 0.18366975182112724,
      "y": 0.22180306297659427,
    },
    {
      "kind": "cross",
      "size": 2.4,
      "x": 0.3079489227705771,
      "y": 0.17738997083351737,
    },
    {
      "kind": "point",
      "size": 1.8,
      "x": 0.41685878819564487,
      "y": 0.3388695127995098,
    },
    {
      "kind": "square",
      "size": 2.1,
      "x": 0.28286053292223745,
      "y": 0.48290134326979206,
    },
    {
      "kind": "point",
      "size": 2,
      "x": 0.22240408396879235,
      "y": 0.6803828429877421,
    },
    {
      "kind": "cross",
      "size": 2,
      "x": 0.47651996111135647,
      "y": 0.5770000023079075,
    },
    {
      "kind": "point",
      "size": 1.7,
      "x": 0.6184926837326797,
      "y": 0.26039022338330875,
    },
    {
      "kind": "square",
      "size": 2.3,
      "x": 0.7438684576930561,
      "y": 0.3828994414231231,
    },
    {
      "kind": "point",
      "size": 1.9,
      "x": 0.6805104573169894,
      "y": 0.5188626224888877,
    },
    {
      "kind": "cross",
      "size": 2.1,
      "x": 0.81600000307721,
      "y": 0.43739364823736165,
    },
    {
      "kind": "point",
      "size": 1.6,
      "x": 0.5805202978444116,
      "y": 0.721809005660739,
    },
    {
      "kind": "square",
      "size": 1.8,
      "x": 0.7838659218974975,
      "y": 0.662140190923567,
    },
  ],
  "boxes": [
    {
      "confidence": 0.8451045731698941,
      "height": 0.64,
      "id": 1,
      "width": 0.34,
      "x": 0.10642206568697267,
      "y": 0.13607348524455612,
    },
    {
      "confidence": 0.7300000307721001,
      "height": 0.44,
      "id": 2,
      "width": 0.34,
      "x": 0.47641061484850994,
      "y": 0.28357566615279683,
    },
  ],
  "brackets": [
    {
      "size": 0.022,
      "x": 0.31,
      "y": 0.18,
    },
    {
      "size": 0.02,
      "x": 0.74,
      "y": 0.38,
    },
    {
      "size": 0.018,
      "x": 0.22,
      "y": 0.68,
    },
  ],
  "labels": [
    {
      "align": "left",
      "text": "IDX 003",
      "x": 0.16,
      "y": 0.16,
    },
    {
      "align": "left",
      "text": "S .86",
      "x": 0.4,
      "y": 0.36,
    },
    {
      "align": "right",
      "text": "A07",
      "x": 0.7,
      "y": 0.3,
    },
    {
      "align": "right",
      "text": "C .91",
      "x": 0.7,
      "y": 0.62,
    },
  ],
  "lines": [
    {
      "alpha": 0.55,
      "ax": 0.18,
      "ay": 0.22,
      "bx": 0.31,
      "by": 0.18,
    },
    {
      "alpha": 0.4,
      "ax": 0.31,
      "ay": 0.18,
      "bx": 0.42,
      "by": 0.34,
    },
    {
      "alpha": 0.48,
      "ax": 0.28,
      "ay": 0.48,
      "bx": 0.22,
      "by": 0.68,
    },
    {
      "alpha": 0.38,
      "ax": 0.42,
      "ay": 0.34,
      "bx": 0.48,
      "by": 0.58,
    },
    {
      "alpha": 0.52,
      "ax": 0.62,
      "ay": 0.26,
      "bx": 0.74,
      "by": 0.38,
    },
    {
      "alpha": 0.44,
      "ax": 0.74,
      "ay": 0.38,
      "bx": 0.82,
      "by": 0.44,
    },
    {
      "alpha": 0.36,
      "ax": 0.68,
      "ay": 0.52,
      "bx": 0.78,
      "by": 0.66,
    },
    {
      "alpha": 0.33,
      "ax": 0.48,
      "ay": 0.58,
      "bx": 0.58,
      "by": 0.72,
    },
  ],
}
`;
